--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ravindu Aratchige</title>
-    <!----CSS link----->
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <title>Ravi Aratchige</title>
 </head>
 <body>
-    <div class="hero">
-        <nav>
-            <img src="/img/logo.png" class="logo">
-            <ul>
-                <!-- <li><a href="#">Home</a></li> -->
-                <!-- <li><a href="#">About</a></li> -->
-                <li><a href="https://www.linkedin.com/in/ravindua/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-                <li><a href="https://instagram.com/mxnithx_?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-                <li><a href="https://medium.com/@ravi_a" target="_blank" rel="noopener noreferrer">Blog</a></li>
-                <li><a href="mailto:rmaratchige@gmail.com" target="_blank" rel="noopener noreferrer">Contact</a></li>
-                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer">Private</a></li>
-            </ul>
-            <a href="/doc/resume.pdf" target="_blank" rel="noopener noreferrer" class="btn">My Resume</a>
-        </nav>
-        <div class="content">
-            <span class="title">Software Engineering Undergraduate</span>
-            <h1>Hello, I’m <span>Ravindu</span></h1>
-            <p>I code late at night, watch cult classic movies, <br>and occasionally do some studies too.</p>
-            <a href="https://github.com/ravi-aratchige" target="_blank" rel="noopener noreferrer" class="btn">Check Out My Github</a>
+    <div class="glass">
+        <div class="heading">
+            <h1>I'm Ravi Aratchige</h1>
         </div>
-    </div>
+        <div class="content">
+            <p>I am a first year software engineering undergraduate at General Sir John Kotelawala Defence University. I enjoy frontend web development, coffee and cult-classic movies.</p>
+            <p>In my free time, you can find me building a website, scrolling through Tiktok, and occassionally studying something.</p>
+        </div>
+        <div class="icons">
+            <a href="https://github.com/ravi-aratchige"><button class="icon"><i class="fa fa-github"></i></button></a>
+            <a href="https://www.linkedin.com/in/ravindua/"><button class="icon"><i class="fa fa-linkedin"></i></button></a>
+            <a href="https://codepen.io/ravi-aratchige"><button class="icon"><i class="fa fa-codepen"></i></button></a>
+            <a href="https://instagram.com/mxnithx_?igshid=YmMyMTA2M2Y="><button class="icon"><i class="fa fa-instagram"></i></button></a>
+            <a href="https://twitter.com/ravindumanitha"><button class="icon"><i class="fa fa-twitter"></i></button></a>
+        </div>
+        <div class="buttons">
+            <a href="doc/resume.pdf"><button class="button" id="resume"><i class="fa fa-download" id="download"></i> Resume</button></a>
+            <span></span>
+            <a href="mailto:rmaratchige.com"><button class="button" id="contact">Contact</button></a>
+        </div>
 </body>
 </html>
