--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <p>In my free time, you can find me building a website, scrolling through Tiktok, and occassionally studying something.</p>
         </div>
         <div class="icons">
-            <a href="https://github.com/ravi-aratchige"><button class="icon"><i class="fa fa-github"></i></button></a>
-            <a href="https://www.linkedin.com/in/ravindua/"><button class="icon"><i class="fa fa-linkedin"></i></button></a>
-            <a href="https://codepen.io/ravi-aratchige"><button class="icon"><i class="fa fa-codepen"></i></button></a>
-            <a href="https://instagram.com/mxnithx_?igshid=YmMyMTA2M2Y="><button class="icon"><i class="fa fa-instagram"></i></button></a>
-            <a href="https://twitter.com/ravindumanitha"><button class="icon"><i class="fa fa-twitter"></i></button></a>
+            <a href="https://github.com/ravi-aratchige" target="_blank" rel="noopener noreferrer"><button class="icon"><i class="fa fa-github"></i></button></a>
+            <a href="https://www.linkedin.com/in/ravindua/" target="_blank" rel="noopener noreferrer"><button class="icon"><i class="fa fa-linkedin"></i></button></a>
+            <a href="https://codepen.io/ravi-aratchige" target="_blank" rel="noopener noreferrer"><button class="icon"><i class="fa fa-codepen"></i></button></a>
+            <a href="https://instagram.com/mxnithx_?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferrer"><button class="icon"><i class="fa fa-instagram"></i></button></a>
+            <a href="https://twitter.com/ravindumanitha" target="_blank" rel="noopener noreferrer"><button class="icon"><i class="fa fa-twitter"></i></button></a>
         </div>
         <div class="buttons">
-            <a href="doc/resume.pdf"><button class="button" id="resume"><i class="fa fa-download" id="download"></i> Resume</button></a>
+            <a href="doc/resume.pdf" target="_blank" rel="noopener noreferrer"><button class="button" id="resume"><i class="fa fa-download" id="download"></i> Resume</button></a>
             <span></span>
             <a href="mailto:rmaratchige.com"><button class="button" id="contact">Contact</button></a>
         </div>
