--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="img/icon.svg">
     <title>Home</title>
 </head>
 <body>
@@ -15,9 +17,9 @@
         <div class="selection">
             <p>What's on your mind?</p>
             <ul class="icons">
-                <li><a href="#"><i class="fa-brands fa-github"></i><br>Code</a></li>
-                <li><a href="#"><i class="fa-solid fa-envelope"></i><br>Work</a></li>
-                <li><a href="#"><i class="fa-brands fa-youtube"></i><br>Chill</a></li>
+                <li><a href="https://github.com/ravi-aratchige"><i class="fa-brands fa-github"></i><br><br>Code</a></li>
+                <li><a href="https://mail.google.com/mail/u/1/#inbox"><i class="fa-solid fa-envelope"></i><br><br>Work</a></li>
+                <li><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i><br><br>Chill</a></li>
             </ul>
         </div>
     </div>
