Added time-based functionality
Webpage now displays time-based greeting, and gradients also respond to current time.

--- a/home/index.html
+++ b/home/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="card">
         <div class="header">
-            <h2>Hello, Ravindu</h2>
+            <h2><span id="greeting"></span></h2>
         </div>
         <div class="selection">
             <p>What's on your mind?</p>
@@ -23,5 +23,6 @@
             </ul>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
