--- a/guess-the-flag/index.html
+++ b/guess-the-flag/index.html
@@ -4,13 +4,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <link rel="stylesheet" href="styles.css">
     <title>Guess The Flag</title>
 </head>
 <body>
     <div class="header">
-        <img src="img/logo.png" alt="Logo">
+        <!-- <a href="index.html" id="websiteLogo"><img src="img/logo.png" alt="Logo"></a> -->
+        <a href="index.html" id="websiteLogo"><i class="fa-solid fa-globe"></i></a>
         <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
@@ -40,7 +42,7 @@
             <button id="4" onclick="checkAnswer(this.id)">Answer 4</button>
         </div>
         <div class="otherOptions">
-            <button id="showAnswer">Show Answer</button>
+            <button id="showAnswer" onclick="showAnswer()">Show Answer</button>
             <button id="skip" onclick="next()">Skip Flag</button>
         </div>
     </div>
