Minor changes to text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>I'm Ravi Aratchige</h1>
         </div>
         <div class="content">
-            <p>I am a first year software engineering undergraduate at General Sir John Kotelawala Defence University. I enjoy frontend web development, coffee and cult-classic movies.</p>
+            <p>I am a first year software engineering undergraduate at General Sir John Kotelawala Defence University. I enjoy talking about UI/UX designing and cult-classic movies.</p>
             <p>In my free time, you can find me building a website, scrolling through Tiktok, and occassionally studying something.</p>
         </div>
         <div class="icons">
